# rust-cli-template

./: Cargo.toml
src/: main.rs
src/cmd/: conf.rs  init.rs  mod.rs  update.rs
src/utils/: config.rs
