[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4.21"
env_logger = "0.11.3"
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = "0.12.2"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]